[gd_scene load_steps=8 format=3 uid="uid://b27lggtg7hvsr"]

[ext_resource type="PackedScene" uid="uid://dppath7jmc7nx" path="res://ui.tscn" id="2"]
[ext_resource type="Script" path="res://main.gd" id="3"]
[ext_resource type="PackedScene" path="res://ball.tscn" id="3_jqrvs"]
[ext_resource type="PackedScene" uid="uid://b40ejdt2fk6j4" path="res://paddle.tscn" id="4_7myvp"]
[ext_resource type="Script" path="res://paddle.gd" id="5_n21r3"]
[ext_resource type="PackedScene" uid="uid://pqtjr7cpvhof" path="res://wall.tscn" id="6_6dot8"]
[ext_resource type="PackedScene" uid="uid://cdh5yubgsp7iy" path="res://goal-area.tscn" id="7_dy0ks"]

[node name="Main" type="Node2D"]
script = ExtResource("3")
MAX_SCORE = 3

[node name="ShotBallTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="RestartGameTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(200, 300)

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="UI" parent="Camera2D/CanvasLayer" instance=ExtResource("2")]

[node name="Ball" parent="." instance=ExtResource("3_jqrvs")]
position = Vector2(200, 300)
motion_mode = 1
wall_min_slide_angle = 0.0
platform_on_leave = 2
MIN_SPEED = 450
MAX_SPEED = 600
SPEED_INCREMENT = 50
Y_RESET_OFFSET = 220

[node name="Player1Paddle" parent="." instance=ExtResource("4_7myvp")]
position = Vector2(200, 560)
script = ExtResource("5_n21r3")
LEFT_ACTION = &"p1_left"
RIGHT_ACTION = &"p1_right"
SLIDE_MULTIPLIER = 0.8
MAX_SPEED = 400

[node name="Player2Paddle" parent="." instance=ExtResource("4_7myvp")]
position = Vector2(200, 40)
rotation = -3.14159
script = ExtResource("5_n21r3")
LEFT_ACTION = &"p2_left"
RIGHT_ACTION = &"p2_right"
SLIDE_MULTIPLIER = 0.8
MAX_SPEED = 400

[node name="LeftWall" parent="." instance=ExtResource("6_6dot8")]
position = Vector2(0, 300)

[node name="RightWall" parent="." instance=ExtResource("6_6dot8")]
position = Vector2(400, 300)

[node name="Player2GoalArea" parent="." instance=ExtResource("7_dy0ks")]
position = Vector2(200, -20)

[node name="Player1GoalArea" parent="." instance=ExtResource("7_dy0ks")]
position = Vector2(200, 620)
